--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "express-validator": "^7.0.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.3",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.1",
     "nodemailer": "^6.9.11",
+    "pdfkit": "^0.14.0",
     "pug": "^3.0.2",
-    "sequelize": "^6.37.0"
+    "sequelize": "^6.37.0",
+    "stripe": "^7.11.0"
   }
 }
